# condo-me

./: .dockerignore  .env-example  .gitignore  Dockerfile  LICENSE  README.md  base_texts.txt  docker-compose.yml  fast_tests.py  pyproject.toml  pytest.ini  setup_postgres_volume.sh  start.sh
.devcontainer/: devcontainer.json
base_templates/global/: base.html  condo_setup_base.html  head_base.html  post_login_base.html  pre_login_base.html  success.html
condo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
condo/migrations/: 0001_initial.py  0002_initial.py  0002_rename_image_commonarea_cover_and_more.py  0003_alter_apartment_number_alter_apartment_residents_and_more.py  0003_alter_condominium_cnpj.py  0003_initial.py  0004_alter_apartment_options.py  0005_alter_commonarea_maximum_using_time.py  (+1 more)
condo_me/: apps.py  urls.py  views.py
condo_people/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
core/: models.py  urls.py  views.py
docker-scripts/: commands.sh
prelogin/: apps.py  urls.py  views.py
production_config/: Dockerfile  README copy.md  commands.sh  docker-compose.yml  instructions.txt  start.sh
project/: settings.py  urls.py
purchase/: admin.py  forms.py  models.py  urls.py  views.py
purchases/: models.py  urls.py  views.py
reservation/: admin.py  models.py  urls.py  views.py
reservations/: admin.py  models.py
src/: manage.py
user/: admin.py  forms.py  models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
utils/: browser.py
(+312 files in other folders)
