[tool.poetry]
name = "condo_me"
version = "0.1.0"
description = "CondoMe app facilitates organized, respectful use of common areas in condominiums. Admin-defined rules allow residents to schedule, reschedule, and cancel slots, ensuring transparency and fostering collective well-being."
authors = ["Rodrigo Farah <digofarah@gmail.com>"]
packages = [
    { include = "src", from = "."}
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
setuptools = "^69.5.1"
wheel = "^0.43.0"
pillow = "^10.3.0"
django-countries = "^7.6.1"
django-stubs = "^5.0.2"
debugpy = "^1.8.2"
coverage = "^7.6.0"
selenium = "^4.23.1"
psycopg2-binary = "^2.9.9"
brutils = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.8.0"
ruff = "^0.5.4"
mypy = "^1.11.0"
isort = "^5.13.2"
black = "^24.8.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203"]
mypy = true

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = true

[tool.django-stubs]
django_settings_module = "project.settings"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
